<resources>
    <string name="home">Home</string>
    <string name="home_tv">TV &amp; Home Entertainment</string>
    <string name="home_app">Home Appliances</string>
    <string name="home_cooling">Cooling &amp; Heating</string>
    <string name="home_small">Small Appliances</string>
    <string name="home_kitchen">Kitchen</string>
    <string name="home_health">Health &amp; Beauty</string>
    <string name="home_life">Lifestyle Electronic</string>
    <string name="home_wearable">Wearable &amp; Gadgets</string>
    <string name="home_accessories">Accessories</string>
    <string name="schedule">HDL Schedule</string>
    <string name="compare">Compare</string>
    <string name="change">Change Language to Thai</string>
    <string name="help">Help</string>
    <string name="category">Categories</string>
    <string name="search_hint">I am looking for...</string>
    <string name="baht">฿</string>
    <string name="product_overview">Key Features</string>
    <string name="product_info">Product Info</string>
    <string name="product_available">Check store stock</string>
    <string name="product_compare">Compare Products</string>
    <string name="product_read">Read More >></string>
    <string name="product_promotion">Promotion</string>
    <string name="product_spec">Specification</string>
    <string name="product_stock">In-stock</string>
    <string name="product_out_stock">Temporary out of stock</string>
    <string name="product_stock_more">จำนวนสินค้าในคลัง: มาก</string>
    <string name="product_stock_medium">จำนวนสินค้าในคลัง: ปานกลาง</string>
    <string name="product_stock_less">จำนวนสินค้าในคลัง: น้อย</string>
    <string name="filter_count">(%1$s)</string>
    <string name="brand">Brand</string>
    <string name="filter_all">All</string>
    <string name="promotion_header">รับประสบการณ์เหนือจินตนาการกับ FUJIFILM เมื่อแบ่งจ่ายด้วยบัตรเครดิต SCB นาน 10 เดือน</string>
    <string name="promotion_detail">ระยะเวลาโปรโมชั่น 17/07/2560 ถึง 23/07/2560</string>
    <string name="error_ssl_cert_invalid">คุณกำลังไปยังหน้าที่อาจจะไม่ปลอดภัย ต้องการดำเนินการต่อหรือไม่?</string>
    <string name="spec_product">Specification</string>
    <string name="book_time">Please choose delivery date</string>
    <string name="hdl_url">http://hdl.powerbuy.co.th/Users/Login</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="product_code">Product Code: </string>
    <string name="the_1_card">Redeem your point %1$,d points</string>
    <string name="format_alert_compare">Has been added %s</string>
    <string name="alert_count">Only 4 products can be added to the compare list.</string>
    <string name="alert_stock">สินค้าไม่มีในคลังสินค้า</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="tab_promotion">Promotion</string>
    <string name="tab_delivery">Arrange Delivery</string>
    <string name="size">Size</string>
    <string name="shade">Shade:</string>
    <string name="add_one_hour_item">1H Pick up</string>
    <string name="compare_header">Compare products</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="rating">Ratings</string>
    <string name="add_more_to_compare">Add more product to compare.</string>
    <string name="can_not_show_spec">You have no Items to compare.</string>
    <string name="clear_all">Clear all</string>
    <string name="text_comfirm_clear_all">Do you want to remove all products from compare list?</string>
    <string name="format_add_more_to_compare">Add more to compare (%s/4)</string>
    <string name="compare_clear_all">Clear all</string>
    <string name="format_compare_products">Compare Product (%s/4)</string>
    <string name="compare_cleared">Compare list is cleared.</string>
    <string name="clear_history">Clear History</string>
    <string name="search_result_header">search result for</string>
    <string name="select_store">Select this store</string>
    <string name="store_avaliable">Store with available stocks</string>
    <string name="store_code">Store number</string>
    <string name="store_name">Store name</string>
    <string name="address">Address</string>
    <string name="stock">In-stock quantity</string>
    <string name="telephone">Tel.</string>
    <string name="drawer_delivery">Delivery Schedule</string>
    <string name="drawer_compare">Compare products</string>
    <string name="drawer_change">เปลี่ยนภาษา</string>
    <string name="drawer_cart">Cart</string>
    <string name="drawer_history">Order History</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_logout">Logout</string>
    <string name="secret">djZtdHRZck9rTDdKVGhkZWF3NEdlN2FDR0JRQlQ0aFovQ0ViWktCNnd2eG5UQUVneFdpVDJRPT0=</string>
    <string name="url_hdl">http://10.5.0.31/HDLAPI/Token/CreateToken</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>
    <string name="time_9am_to_half_9am" translatable="false">09:00 - 09:30</string>
    <string name="time_half_9am_to_10am" translatable="false">09:30 - 10:00</string>
    <string name="time_10am_to_half_10am" translatable="false">10:00 - 10:30</string>
    <string name="time_half_10am_to_11am" translatable="false">10:30 - 11:00</string>
    <string name="time_11am_to_half_11am" translatable="false">11:00 - 11:30</string>
    <string name="time_half_11am_to_12pm" translatable="false">11:30 - 12:00</string>
    <string name="time_1pm_to_half_1pm" translatable="false">13:00 - 13:30</string>
    <string name="time_half_1pm_to_2pm" translatable="false">13:30 - 14:00</string>
    <string name="time_2pm_to_half_2pm" translatable="false">14:00 - 14:30</string>
    <string name="time_half_2pm_to_3pm" translatable="false">14:30 - 15:00</string>
    <string name="time_3pm_to_half_3pm" translatable="false">15:00 - 15:30</string>
    <string name="time_half_3pm_to_4pm" translatable="false">15:30 - 16:00</string>
    <string name="time_4pm_to_half_4pm" translatable="false">16:00 - 16:30</string>
    <string name="time_half_4pm_to_5pm" translatable="false">16:30 - 17:00</string>
    <string name="time_5pm_to_half_5pm" translatable="false">17:00 - 17:30</string>
    <string name="time_half_5pm_to_6pm" translatable="false">17:30 - 18:00</string>
    <string name="time_6pm_to_half_6pm" translatable="false">18:00 - 18:30</string>
    <string name="time_half_6pm_to_7pm" translatable="false">18:30 - 19:00</string>
    <string name="time_7pm_to_half_7pm" translatable="false">19:00 - 19:30</string>
    <string name="product_list">items[id,sku,name,attribute_set_id,price,status,created_at_updated_at],total_count</string>
    <string name="product_detail">id,sku,name,attribute_set_id,price,status,created_at_updated_at,custom_attributes</string>
    <string name="url_image">https://prod.powerbuy.co.th/media/catalog/product</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loading">Loading...</string>
    <string name="user_not_found">Please enter valid username and password.</string>
    <string name="not_connected_network">Cannot connect to the Internet.</string>
    <string name="server_not_found">Cannot connect to the server.</string>
    <string name="payment_header">Personal and Delivery Detail</string>
    <string name="user_profile">Personal Detail</string>
    <string name="required_field">*</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="tell">Contact Number</string>
    <string name="email">Email Address</string>
    <string name="house_no">House no.</string>
    <string name="place_or_building">Place/Building</string>
    <string name="soi">Soi</string>
    <string name="street">Street</string>
    <string name="contact_number_reserve">Contact Number (Reserve)</string>
    <string name="province">Province</string>
    <string name="district">District</string>
    <string name="sub_district">Sub District</string>
    <string name="post_code">Postcode</string>
    <string name="title_order_success">Your order is successfully placed.</string>
    <string name="order_number">Order no: </string>
    <string name="products">Product</string>
    <string name="price">Price</string>
    <string name="qty">Quantity</string>
    <string name="total">Total</string>
    <string name="total_price">Total Price</string>
    <string name="finished">Done</string>
    <string name="order_detail">Your Order Details</string>
    <string name="personal_detail">Order Information</string>
    <string name="store_collection_detail">Store to Collect from</string>
    <string name="delivery_detail">Delivery Address</string>
    <string name="order_date">Order date</string>
    <string name="customer_name">Customer name</string>
    <string name="phone">Tel/Mobile no.</string>
    <string name="open_today">Open</string>
    <string name="branch">Store name</string>
    <string name="search_not_found">Sorry, we cannot find what you are looking for</string>
    <string name="product_price">Price:</string>
    <string name="label_billing_address">Billing Address</string>
    <string name="label_shipping_type">Delivery type</string>
    <string name="label_delivery_info">Delivery option</string>
    <string name="label_the_one_number">The 1 No.</string>
    <string name="delivery_price">Delivery price</string>
    <string name="tax_id_success">Tax ID</string>
    <string name="preference_file_name">pwb_app_preference</string>
    <string name="added_to_cart">This product has been added to your shopping cart.</string>
    <string name="added_to_compare">This product has been added to compare products.</string>
    <string name="title_confirm_delete_item">Are you sure to remove this item from your cart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="format_header_cart_items">Your shopping cart (%s item)</string>
    <string name="name_price">Price:</string>
    <string name="skip"><u>Skip</u></string>
    <string name="billing_address">Billing Address</string>
    <string name="qty_title">Quantity:</string>
    <string name="fill_in_important_information">Please fill in information</string>
    <string name="sorry">Sorry</string>
    <string name="some_thing_wrong">Something went wrong, Please try again</string>
    <string name="confirm_oder">Do you confirm to proceed this order?</string>
    <string name="ok_alert">Yes</string>
    <string name="cancel_alert">No</string>
    <string name="cannot_get_cart_item">Something went wrong, we cannot display item in your cart. Please try again.</string>
    <string name="not_have_products_in_cart">Your cart is empty. Please continue shopping</string>
    <string name="not_have_user">Sorry, we cannot find this account. Do you want to skip?</string>
    <string name="choose">Select</string>
    <string name="history">History</string>
    <string name="not_found_data">Sorry, no data found</string>
    <string name="label_stock_availability">Stock Availability</string>
    <string name="label_stock_online">Online</string>
    <string name="label_stock_store_offline">Current Store</string>
    <string name="label_stock_stores_offline"><u>Other Stores</u></string>
    <string name="payment_channel">Channel</string>
    <string name="payment_payer_name">Payer name</string>
    <string name="payment_mobile_number">Mobile Number</string>
    <string name="payment_counter_transfer">Over the Counter</string>
    <string name="payment_bank_transfer">Bank Channels</string>
    <string name="pay_now">Pay now</string>
</resources>