<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_topic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/headDetail"
    android:orientation="horizontal"
    android:padding="8dp">

    <cenergy.central.com.pwb_store.view.PowerBuyTextView
        android:id="@+id/tvStoreCode"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center|center_vertical"
        android:text="@string/store_code"
        android:textColor="@color/nameProductColor"
        android:textStyle="bold" />

    <cenergy.central.com.pwb_store.view.PowerBuyTextView
        android:id="@+id/tvStoreName"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center|center_vertical"
        android:text="@string/store_name"
        android:textColor="@color/nameProductColor"
        android:textStyle="bold" />

    <cenergy.central.com.pwb_store.view.PowerBuyTextView
        android:id="@+id/tvStoreContact"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center|center_vertical"
        android:text="@string/telephone"
        android:textColor="@color/nameProductColor"
        android:textStyle="bold" />

    <cenergy.central.com.pwb_store.view.PowerBuyTextView
        android:id="@+id/tvStoreStock"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center|center_vertical"
        android:text="@string/stock"
        android:textColor="@color/nameProductColor"
        android:textStyle="bold" />
</LinearLayout>
