<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/app_bottom_bar_size">

    <cenergy.central.com.pwb_store.view.PowerBuyTextView
        android:id="@+id/txt_header_payment"
        style="@style/textCompare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ellipsize="end"
        android:text="@string/payment_header"
        app:typeFaceAsset="RobotoLight.ttf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/border_grey"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="32dp"
        android:paddingEnd="64dp"
        android:paddingStart="64dp"
        android:paddingTop="32dp">

        <cenergy.central.com.pwb_store.view.PowerBuyTextView
            style="@style/textSubCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/tell" />

        <cenergy.central.com.pwb_store.view.PowerBuyEditText
            android:id="@+id/contact_number_check_out"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_grey"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="8dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:textSize="18sp"
            android:windowSoftInputMode="adjustResize" />

        <cenergy.central.com.pwb_store.view.PowerBuyIconButton
            android:id="@+id/checkoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:text="@string/ok"
            app:icon_invisible="true"
            app:btn_disable="true"/>

        <cenergy.central.com.pwb_store.view.PowerBuyTextView
            android:id="@+id/skipButton"
            style="@style/RaisedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textColor="@drawable/text_selector"
            app:typeFaceAsset="RobotoLight.ttf" />

    </LinearLayout>

</LinearLayout>