<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="280dp"
    android:padding="@dimen/margin_padding_small">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_stock_availability"
        android:textColor="@color/blackText"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_small"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/margin_padding_small"
        android:paddingBottom="@dimen/margin_padding_small"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvStockOnline"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/shape_circle_red"
            android:drawablePadding="@dimen/margin_padding_xsmall"
            android:gravity="center_vertical"
            android:text="@string/label_stock_online"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvStockStoreOffline"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/shape_circle_red"
            android:drawablePadding="@dimen/margin_padding_xsmall"
            android:gravity="center_vertical"
            android:text="@string/label_stock_store_offline"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvStockStoresOffline"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/shape_circle_red"
            android:drawablePadding="@dimen/margin_padding_xsmall"
            android:gravity="center_vertical"
            android:text="@string/label_stock_stores_offline"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>